--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.3",
     "sails-disk": "~0.10.9",
+    "sails-postgresql": "^0.11.4",
     "waterline-postgresql": "^0.14.8"
   },
   "scripts": {
