changes related to table change.
changes related to table change.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "NODE_ENV=testing node app.js"
   },
   "main": "app.js",
   "repository": {
